Changed conn string

--- a/TextChatDemo/Web.config
+++ b/TextChatDemo/Web.config
@@ -16,7 +16,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="RTCIDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=RTCI_SBDC_2;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--Use the First connection string to Use application locally(in LocalHost)-->
+    <!--<add name="RTCIDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=RTCI_SBDC_2;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    
+    <!--Use the Second(below) connection string to use Azure app deployed in cloud RTCI-->
+    <add name ="RTCIDbContext"
+        connectionString="Data Source=rtciserver.database.windows.net;Initial Catalog=RTCIDb;
+         User ID=adminserver;Password=Binghamton2301$;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;
+         ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <!--<connectionStrings>
     
